se crea components, pagina de inicio y contacto

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,14 @@
-main{
+* {
   margin: 0;
   padding: 0;
-box-sizing: border-box;
-min-height: 100vh;
+  box-sizing: border-box;
 }
+
+main {
+  background-color: #caedfd;
+min-height: 100vh;
+
+}
+
+
+
