--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -1,3 +1,50 @@
+.responsive-carousel {
+  margin-bottom: 5rem;
+}
+
+.carousel-img {
+  width: 100%;
+  height: auto;
+  max-height: 400px;
+  object-fit: contain;
+  display: block;
+  margin: 0 auto;
+}
+
+/* Ajustes para pantallas chicas */
+@media (max-width: 768px) {
+  .carousel-img {
+    max-height: 250px;
+  }
+}
+
+@media (max-width: 576px) {
+  .carousel-img {
+    max-height: 180px;
+  }
+}
+
+.banner-naranja {
+  background-color: #fff4e6;
+  border-top: 1px solid #f08c00;
+  border-bottom: 1px solid #f08c00;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+   margin-bottom: 5rem;
+}
+
+.banner-naranja img {
+  max-width: 100%;
+  height: auto;
+}
+
+.banner-naranja .btn-warning:hover {
+  background-color: #f08c00;
+  color: white;
+}
+
+
+
+
 
 .card-img-top {
   height: 200px;
