--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,13 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background-color: #caedfd; 
+ 
   font-family: 'Segoe UI', sans-serif;
+
+  /* Usamos las variables de Bootstrap en lugar de colores fijos */
+  background-color: var(--bs-body-bg);
+  color: var(--bs-body-color);
+  transition: background-color 0.3s ease, color 0.3s ease; /* Un suavizado cheto */
 }
 
 main {
@@ -69,3 +74,22 @@ footer {
   }
 }
 
+/* HEADER EN MODO OSCURO */
+[data-bs-theme="dark"] .navbar {
+    /* Opción 1: Gris Carbón (Recomendado) */
+    background-color: #212529 !important; 
+    
+    /* Opción 2: Azul Noche (Si prefieres mantener el toque azul) */
+    /* background-color: #051b3b !important; */
+
+    /* Un borde sutil abajo para separarlo del contenido */
+    border-bottom: 1px solid #373b3e;
+    transition: background-color 0.3s ease;
+}
+
+/* Opcional: Asegurar que el Footer también cambie si es azul */
+[data-bs-theme="dark"] footer {
+     background-color: #212529 !important;
+     color: white;
+     border-top: 1px solid #373b3e;
+}
